--- a/Team member1/tamilselvan assignment1.ipynb
+++ b/Team member1/tamilselvan assignment1.ipynb
@@ -1,1 +1,767 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "25aed440-2526-43d9-9815-3d9ae70b9ec6",
+   "metadata": {},
+   "source": [
+    "Basic Python\n",
+    "1. Split this string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f9b6edd7-a8fe-4536-a659-5ff983ba13ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hi', 'there', 'Sam!']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"Hi there Sam!\"\n",
+    "s.split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5070f185-dd86-406f-a778-7759a718d7b8",
+   "metadata": {},
+   "source": [
+    "2. Use .format() to print the following string."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae3c917e-2cf5-4194-8a03-888898a259d4",
+   "metadata": {},
+   "source": [
+    "Output should be: The diameter of Earth is 12742 kilometers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1fe48ad3-4121-4be6-9463-129d6e2cd468",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The diameter of Earth is 12742 kilometers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "planet = \"Earth\"\n",
+    "diameter = 12742\n",
+    "\n",
+    "print(\"The diameter of {} is {} kilometers.\". format(planet , diameter))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bc86f2c-b0e3-4f8f-a808-a335b294b14c",
+   "metadata": {},
+   "source": [
+    "3. In this nest dictionary grab the word \"hello\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d3f0ce03-fe1b-46af-a736-f22d23385667",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'hello']}]}]}\n",
+    "\n",
+    "d['k1'][3]['tricky'][3]['target'][3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c97586f0-6420-44ee-9a5d-53db22cf4a97",
+   "metadata": {},
+   "source": [
+    "Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "073245fd-549c-4c76-b426-2f18e3be842b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb49f774-0680-4898-99e8-45a319f1cf34",
+   "metadata": {},
+   "source": [
+    "4.1 Create an array of 10 zeros?\n",
+    "4.2 Create an array of 10 fives?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b25c45d8-1cef-4c8f-a0e9-0491246da7d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.zeros(10)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "35f38a09-436b-4964-a52c-8f134f7584d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5., 5., 5., 5., 5., 5., 5., 5., 5., 5.])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = np.ones(10)*5\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3071daa-7cbb-450b-87d5-e7c9b9b350db",
+   "metadata": {},
+   "source": [
+    "5. Create an array of all the even integers from 20 to 35"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "42fc395a-f6e0-4322-9c5b-e3f9fcc644c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([20, 22, 24, 26, 28, 30, 32, 34])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.arange(20,35,2)\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78a23521-c6ee-4e16-9e1a-ac814fc56146",
+   "metadata": {},
+   "source": [
+    "6. Create a 3x3 matrix with values ranging from 0 to 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e8fe0a35-64fb-4c0d-9336-bc23a347b879",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2],\n",
+       "       [3, 4, 5],\n",
+       "       [6, 7, 8]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.arange(0,9).reshape(3,3)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7e738d2-fea4-4de7-b863-544f605b8125",
+   "metadata": {},
+   "source": [
+    "7. Concatinate a and b\n",
+    "a = np.array([1, 2, 3]), b = np.array([4, 5, 6])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "af7bc623-8534-4d59-9341-4788719fdd41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3])\n",
+    "b = np.array([4,5,6])\n",
+    "np.concatenate((a,b),axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd2569f5-7835-4e7e-9945-8fc340ff6369",
+   "metadata": {},
+   "source": [
+    "Pandas\n",
+    "8. Create a dataframe with 3 rows and 2 columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9b586fd6-4063-4d7b-a627-fc326b825070",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>prasanna</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>prasanth</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>praveen</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tamil</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name  age\n",
+       "0  prasanna   21\n",
+       "1  prasanth   21\n",
+       "2   praveen   20\n",
+       "3     tamil   21"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "d = {\"name\":[\"prasanna\",\"prasanth\",\"praveen\",\"tamil\"],\"age\":[21,21,20,21]}\n",
+    "df = pd.DataFrame(d)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ab596aa-0c93-4d49-9b59-33b7628013dc",
+   "metadata": {},
+   "source": [
+    "9. Generate the series of dates from 1st Jan, 2023 to 10th Feb, 2023"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "17d1a2ce-24a1-4edf-af5d-d386b045dce1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-01-01 00:00:00\n",
+      "2023-01-02 00:00:00\n",
+      "2023-01-03 00:00:00\n",
+      "2023-01-04 00:00:00\n",
+      "2023-01-05 00:00:00\n",
+      "2023-01-06 00:00:00\n",
+      "2023-01-07 00:00:00\n",
+      "2023-01-08 00:00:00\n",
+      "2023-01-09 00:00:00\n",
+      "2023-01-10 00:00:00\n",
+      "2023-01-11 00:00:00\n",
+      "2023-01-12 00:00:00\n",
+      "2023-01-13 00:00:00\n",
+      "2023-01-14 00:00:00\n",
+      "2023-01-15 00:00:00\n",
+      "2023-01-16 00:00:00\n",
+      "2023-01-17 00:00:00\n",
+      "2023-01-18 00:00:00\n",
+      "2023-01-19 00:00:00\n",
+      "2023-01-20 00:00:00\n",
+      "2023-01-21 00:00:00\n",
+      "2023-01-22 00:00:00\n",
+      "2023-01-23 00:00:00\n",
+      "2023-01-24 00:00:00\n",
+      "2023-01-25 00:00:00\n",
+      "2023-01-26 00:00:00\n",
+      "2023-01-27 00:00:00\n",
+      "2023-01-28 00:00:00\n",
+      "2023-01-29 00:00:00\n",
+      "2023-01-30 00:00:00\n",
+      "2023-01-31 00:00:00\n",
+      "2023-02-01 00:00:00\n",
+      "2023-02-02 00:00:00\n",
+      "2023-02-03 00:00:00\n",
+      "2023-02-04 00:00:00\n",
+      "2023-02-05 00:00:00\n",
+      "2023-02-06 00:00:00\n",
+      "2023-02-07 00:00:00\n",
+      "2023-02-08 00:00:00\n",
+      "2023-02-09 00:00:00\n",
+      "2023-02-10 00:00:00\n",
+      "2023-02-11 00:00:00\n",
+      "2023-02-12 00:00:00\n",
+      "2023-02-13 00:00:00\n",
+      "2023-02-14 00:00:00\n",
+      "2023-02-15 00:00:00\n",
+      "2023-02-16 00:00:00\n",
+      "2023-02-17 00:00:00\n",
+      "2023-02-18 00:00:00\n",
+      "2023-02-19 00:00:00\n",
+      "2023-02-20 00:00:00\n",
+      "2023-02-21 00:00:00\n",
+      "2023-02-22 00:00:00\n",
+      "2023-02-23 00:00:00\n",
+      "2023-02-24 00:00:00\n",
+      "2023-02-25 00:00:00\n",
+      "2023-02-26 00:00:00\n",
+      "2023-02-27 00:00:00\n",
+      "2023-02-28 00:00:00\n",
+      "2023-03-01 00:00:00\n",
+      "2023-03-02 00:00:00\n",
+      "2023-03-03 00:00:00\n",
+      "2023-03-04 00:00:00\n",
+      "2023-03-05 00:00:00\n",
+      "2023-03-06 00:00:00\n",
+      "2023-03-07 00:00:00\n",
+      "2023-03-08 00:00:00\n",
+      "2023-03-09 00:00:00\n",
+      "2023-03-10 00:00:00\n",
+      "2023-03-11 00:00:00\n",
+      "2023-03-12 00:00:00\n",
+      "2023-03-13 00:00:00\n",
+      "2023-03-14 00:00:00\n",
+      "2023-03-15 00:00:00\n",
+      "2023-03-16 00:00:00\n",
+      "2023-03-17 00:00:00\n",
+      "2023-03-18 00:00:00\n",
+      "2023-03-19 00:00:00\n",
+      "2023-03-20 00:00:00\n",
+      "2023-03-21 00:00:00\n",
+      "2023-03-22 00:00:00\n",
+      "2023-03-23 00:00:00\n",
+      "2023-03-24 00:00:00\n",
+      "2023-03-25 00:00:00\n",
+      "2023-03-26 00:00:00\n",
+      "2023-03-27 00:00:00\n",
+      "2023-03-28 00:00:00\n",
+      "2023-03-29 00:00:00\n",
+      "2023-03-30 00:00:00\n",
+      "2023-03-31 00:00:00\n",
+      "2023-04-01 00:00:00\n",
+      "2023-04-02 00:00:00\n",
+      "2023-04-03 00:00:00\n",
+      "2023-04-04 00:00:00\n",
+      "2023-04-05 00:00:00\n",
+      "2023-04-06 00:00:00\n",
+      "2023-04-07 00:00:00\n",
+      "2023-04-08 00:00:00\n",
+      "2023-04-09 00:00:00\n",
+      "2023-04-10 00:00:00\n",
+      "2023-04-11 00:00:00\n",
+      "2023-04-12 00:00:00\n",
+      "2023-04-13 00:00:00\n",
+      "2023-04-14 00:00:00\n",
+      "2023-04-15 00:00:00\n",
+      "2023-04-16 00:00:00\n",
+      "2023-04-17 00:00:00\n",
+      "2023-04-18 00:00:00\n",
+      "2023-04-19 00:00:00\n",
+      "2023-04-20 00:00:00\n",
+      "2023-04-21 00:00:00\n",
+      "2023-04-22 00:00:00\n",
+      "2023-04-23 00:00:00\n",
+      "2023-04-24 00:00:00\n",
+      "2023-04-25 00:00:00\n",
+      "2023-04-26 00:00:00\n",
+      "2023-04-27 00:00:00\n",
+      "2023-04-28 00:00:00\n",
+      "2023-04-29 00:00:00\n",
+      "2023-04-30 00:00:00\n",
+      "2023-05-01 00:00:00\n",
+      "2023-05-02 00:00:00\n",
+      "2023-05-03 00:00:00\n",
+      "2023-05-04 00:00:00\n",
+      "2023-05-05 00:00:00\n",
+      "2023-05-06 00:00:00\n",
+      "2023-05-07 00:00:00\n",
+      "2023-05-08 00:00:00\n",
+      "2023-05-09 00:00:00\n",
+      "2023-05-10 00:00:00\n",
+      "2023-05-11 00:00:00\n",
+      "2023-05-12 00:00:00\n",
+      "2023-05-13 00:00:00\n",
+      "2023-05-14 00:00:00\n",
+      "2023-05-15 00:00:00\n",
+      "2023-05-16 00:00:00\n",
+      "2023-05-17 00:00:00\n",
+      "2023-05-18 00:00:00\n",
+      "2023-05-19 00:00:00\n",
+      "2023-05-20 00:00:00\n",
+      "2023-05-21 00:00:00\n",
+      "2023-05-22 00:00:00\n",
+      "2023-05-23 00:00:00\n",
+      "2023-05-24 00:00:00\n",
+      "2023-05-25 00:00:00\n",
+      "2023-05-26 00:00:00\n",
+      "2023-05-27 00:00:00\n",
+      "2023-05-28 00:00:00\n",
+      "2023-05-29 00:00:00\n",
+      "2023-05-30 00:00:00\n",
+      "2023-05-31 00:00:00\n",
+      "2023-06-01 00:00:00\n",
+      "2023-06-02 00:00:00\n",
+      "2023-06-03 00:00:00\n",
+      "2023-06-04 00:00:00\n",
+      "2023-06-05 00:00:00\n",
+      "2023-06-06 00:00:00\n",
+      "2023-06-07 00:00:00\n",
+      "2023-06-08 00:00:00\n",
+      "2023-06-09 00:00:00\n",
+      "2023-06-10 00:00:00\n",
+      "2023-06-11 00:00:00\n",
+      "2023-06-12 00:00:00\n",
+      "2023-06-13 00:00:00\n",
+      "2023-06-14 00:00:00\n",
+      "2023-06-15 00:00:00\n",
+      "2023-06-16 00:00:00\n",
+      "2023-06-17 00:00:00\n",
+      "2023-06-18 00:00:00\n",
+      "2023-06-19 00:00:00\n",
+      "2023-06-20 00:00:00\n",
+      "2023-06-21 00:00:00\n",
+      "2023-06-22 00:00:00\n",
+      "2023-06-23 00:00:00\n",
+      "2023-06-24 00:00:00\n",
+      "2023-06-25 00:00:00\n",
+      "2023-06-26 00:00:00\n",
+      "2023-06-27 00:00:00\n",
+      "2023-06-28 00:00:00\n",
+      "2023-06-29 00:00:00\n",
+      "2023-06-30 00:00:00\n",
+      "2023-07-01 00:00:00\n",
+      "2023-07-02 00:00:00\n",
+      "2023-07-03 00:00:00\n",
+      "2023-07-04 00:00:00\n",
+      "2023-07-05 00:00:00\n",
+      "2023-07-06 00:00:00\n",
+      "2023-07-07 00:00:00\n",
+      "2023-07-08 00:00:00\n",
+      "2023-07-09 00:00:00\n",
+      "2023-07-10 00:00:00\n",
+      "2023-07-11 00:00:00\n",
+      "2023-07-12 00:00:00\n",
+      "2023-07-13 00:00:00\n",
+      "2023-07-14 00:00:00\n",
+      "2023-07-15 00:00:00\n",
+      "2023-07-16 00:00:00\n",
+      "2023-07-17 00:00:00\n",
+      "2023-07-18 00:00:00\n",
+      "2023-07-19 00:00:00\n",
+      "2023-07-20 00:00:00\n",
+      "2023-07-21 00:00:00\n",
+      "2023-07-22 00:00:00\n",
+      "2023-07-23 00:00:00\n",
+      "2023-07-24 00:00:00\n",
+      "2023-07-25 00:00:00\n",
+      "2023-07-26 00:00:00\n",
+      "2023-07-27 00:00:00\n",
+      "2023-07-28 00:00:00\n",
+      "2023-07-29 00:00:00\n",
+      "2023-07-30 00:00:00\n",
+      "2023-07-31 00:00:00\n",
+      "2023-08-01 00:00:00\n",
+      "2023-08-02 00:00:00\n",
+      "2023-08-03 00:00:00\n",
+      "2023-08-04 00:00:00\n",
+      "2023-08-05 00:00:00\n",
+      "2023-08-06 00:00:00\n",
+      "2023-08-07 00:00:00\n",
+      "2023-08-08 00:00:00\n",
+      "2023-08-09 00:00:00\n",
+      "2023-08-10 00:00:00\n",
+      "2023-08-11 00:00:00\n",
+      "2023-08-12 00:00:00\n",
+      "2023-08-13 00:00:00\n",
+      "2023-08-14 00:00:00\n",
+      "2023-08-15 00:00:00\n",
+      "2023-08-16 00:00:00\n",
+      "2023-08-17 00:00:00\n",
+      "2023-08-18 00:00:00\n",
+      "2023-08-19 00:00:00\n",
+      "2023-08-20 00:00:00\n",
+      "2023-08-21 00:00:00\n",
+      "2023-08-22 00:00:00\n",
+      "2023-08-23 00:00:00\n",
+      "2023-08-24 00:00:00\n",
+      "2023-08-25 00:00:00\n",
+      "2023-08-26 00:00:00\n",
+      "2023-08-27 00:00:00\n",
+      "2023-08-28 00:00:00\n",
+      "2023-08-29 00:00:00\n",
+      "2023-08-30 00:00:00\n",
+      "2023-08-31 00:00:00\n",
+      "2023-09-01 00:00:00\n",
+      "2023-09-02 00:00:00\n",
+      "2023-09-03 00:00:00\n",
+      "2023-09-04 00:00:00\n",
+      "2023-09-05 00:00:00\n",
+      "2023-09-06 00:00:00\n",
+      "2023-09-07 00:00:00\n",
+      "2023-09-08 00:00:00\n",
+      "2023-09-09 00:00:00\n",
+      "2023-09-10 00:00:00\n",
+      "2023-09-11 00:00:00\n",
+      "2023-09-12 00:00:00\n",
+      "2023-09-13 00:00:00\n",
+      "2023-09-14 00:00:00\n",
+      "2023-09-15 00:00:00\n",
+      "2023-09-16 00:00:00\n",
+      "2023-09-17 00:00:00\n",
+      "2023-09-18 00:00:00\n",
+      "2023-09-19 00:00:00\n",
+      "2023-09-20 00:00:00\n",
+      "2023-09-21 00:00:00\n",
+      "2023-09-22 00:00:00\n",
+      "2023-09-23 00:00:00\n",
+      "2023-09-24 00:00:00\n",
+      "2023-09-25 00:00:00\n",
+      "2023-09-26 00:00:00\n",
+      "2023-09-27 00:00:00\n",
+      "2023-09-28 00:00:00\n",
+      "2023-09-29 00:00:00\n",
+      "2023-09-30 00:00:00\n",
+      "2023-10-01 00:00:00\n",
+      "2023-10-02 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "P = pd.date_range(start='1-1-2023',end='10-2-2023')\n",
+    "for val in P:\n",
+    "  print(val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f330b6f7-67e2-47a5-9efa-3512f9e5976d",
+   "metadata": {},
+   "source": [
+    "10. Create 2D list to DataFrame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdd2c104-2d58-420d-a5dd-a9dce394c39a",
+   "metadata": {},
+   "source": [
+    "lists = [[1, 'aaa', 22], [2, 'bbb', 25], [3, 'ccc', 24]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a430fab0-1bb1-4b8b-a8e1-663b9d2341fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>aaa</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>bbb</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>ccc</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0    1   2\n",
+       "0  1  aaa  22\n",
+       "1  2  bbb  25\n",
+       "2  3  ccc  24"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lists = [[1, 'aaa', 22], [2, 'bbb', 25], [3, 'ccc', 24]]\n",
+    "\n",
+    "df = pd.DataFrame(lists)\n",
+    "df"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
